# all_asserts

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRATE.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-questions.md
.github/workflows/: test.yml
src/: lib.rs
tests/: basic.rs  handling_nans.rs
